--- a/grading.html
+++ b/grading.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <head runat="server">
     <title>Sign up form</title>
-    <link rel="stylesheet" type="text/css" href="./sign_up_food.css" />
-    <script src="grade.js"></script>  
+    <link rel="stylesheet" type="text/css" href="./grade.css" />
+
 </head>
 <body>
     <div>
@@ -13,7 +13,7 @@
         </header>    
 
      
-            <div class="main">
+            <!-- <div class="main">
                 <input type="checkbox" id="chk" aria-hidden="true">
 
                 <div class="signup">
@@ -25,10 +25,14 @@
                 <input type="number" name="age" placeholder="Age" id="age"  required="" >   
                 <input type="number" name="psword" placeholder="Incourse" id="incourse"  required="" >
                 <input type="number" name="psword" placeholder="Exam score" id="exam_score"  required="" >   
-                <button onclick="conc()">Sign up</button> 
-                    </form>
-            </div> 
-                  
+                                    </form>
+            </div>  -->
+
+            <div style="text-align: center;">
+            <button>Show</button>
+                </div>
+                <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+                <script src="grade.js"></script>  
          <footer id="ukwu1">
         Website copyright 2022
         </footer>
